--- a/style.css
+++ b/style.css
@@ -629,7 +629,7 @@
       
       .section__title {
         font-size: 1.5rem;
-        color: #f9f9f9;
+        color: var(--color-bg);
       }
       
       #btnTheme {
