--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
     .section__title {
       text-align: center;
       margin-bottom: 40px;
-      color: var(--color-primary);
+      color: var(--color-bg);
       position: relative;
       padding-bottom: 15px;
     }
